update text in html

--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -6,10 +6,10 @@
 
 {% block content %}
     <header class="page-header page-header-left-inline-breadcrumb">
-        <h2 class="font-weight-bold text-6">Дашборд ></h2>
+        <h2 class="font-weight-bold text-6">Dashbord ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>клиенты</span></li>
+                <li><span>Mijoz</span></li>
             </ol>
         </div>
     </header>
@@ -22,19 +22,19 @@
                     <div class="card-actions">
                         <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
                     </div>
-                    <a type="button" href="{% url 'clients:add' %}" class="btn btn-primary">Добавить</a>
+                    <a type="button" href="{% url 'clients:add' %}" class="btn btn-primary">Qo'shmoq</a>
                 </div>
                 <div class="card-body">
                     <table class="table table-responsive-md table-bordered mb-0">
                         <thead>
                         <tr>
                             <th>#</th>
-                            <th>Usernam</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>ChatId</th>
-                            <th>Phone number</th>
-                            <th>Actions</th>
+                            <th>Username</th>
+                            <th>Ism</th>
+                            <th>Familiya</th>
+                            <th>Chat Id</th>
+                            <th>Telefon</th>
+                            <th>Harakat</th>
                         </tr>
                         </thead>
                         <tbody>
