--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -63,7 +63,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-link" href="{% url 'transactions:transaction_add'  %}">
+                                <a class="nav-link" href="{% url 'transactions:transaction_add' %}">
                                     Yangi to'lov
                                 </a>
                             </li>
@@ -90,7 +90,7 @@
                         </ul>
                     </li>
                     <hr class="separator">
-                     <li class="nav-parent">
+                    <li class="nav-parent">
                         <a class="nav-link" href="#">
                             <i class="bx bx-info-circle" aria-hidden="true"></i>
                             <span>Umumiy ma'lumot</span>
@@ -98,7 +98,7 @@
                         <ul class="nav nav-children">
 
                             <li>
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="{% url 'accounts:company' user.id %}">
                                     Kompaniya
                                 </a>
                             </li>
