--- a/templates/accounts/company/detail.html
+++ b/templates/accounts/company/detail.html
@@ -49,13 +49,7 @@
                                         {{ company.name }}
                                     </div>
                                 </div>
-                                <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
-                                        manzili</label>
-                                    <div class="col-lg-7 col-xl-6">
-                                        {{ company.address }}
-                                    </div>
-                                </div>
+
                                 <div class="form-group row align-items-center pb-3">
                                     <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
                                         telefon raqam</label>
@@ -170,10 +164,15 @@
             </div>
         </div>
         <div class="row action-buttons">
+             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
+                <a href="{% url 'accounts:home'  %}"
+                   class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
+                    Orqaga</a>
+            </div>
             <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
                 <a href="{% url 'accounts:company_update' company.id %}"
                    class="delete-button btn btn-success btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1  modal-basic ">
-                    <i class="bx bx-save text-4 me-2"></i> O'zgartirish
+                    <i class="bx bx-pen text-4 me-2"></i> O'zgartirish
                 </a>
             </div>
         </div>
