created bank form

--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -103,7 +103,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="{% url 'accounts:money_saver_list' user.id %}">
                                     Bank
                                 </a>
                             </li>
