--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -47,7 +47,7 @@
         <div class="col-sm-auto text-center mb-4 mb-sm-0 mt-2 mt-sm-0">
             <a href="{% url 'products:add' %}"
                class="ecommerce-sidebar-link btn btn-primary btn-md font-weight-semibold btn-py-2 px-4"
-               data-ajax-url="ajax/ajax-products-form-empty.html">+ Mahsulot qo'shmoq</a>
+               data-ajax-url="ajax/ajax-products-form-empty.html">+ Qo'shmoq</a>
         </div>
 
     </div>
