--- a/templates/products/binding_types/binding_type_list.html
+++ b/templates/products/binding_types/binding_type_list.html
@@ -26,14 +26,14 @@
                         Qo'shmoq</a>
                 </div>
                 <div class="card-body">
-                    <table class="table table-responsive-md table-bordered mb-0 text-center" >
+                    <table class="table table-responsive-md table-bordered mb-0 text-center">
                         <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Korxona</th>
-                            <th>Nomi</th>
-                            <th>Rasm</th>
-                            <th>Harakat</th>
+                            <th class="w-5">#</th>
+                            <th class="w-15">Korxona</th>
+                            <th class="w-15">Nomi</th>
+                            <th class="w-15">Rasm</th>
+                            <th class="w-25">Harakat</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -46,16 +46,19 @@
                                 <td>{{ binding_type.name }}</td>
                                 <td>
                                     {% if binding_type.photo %}
-                                    <img src="{{ binding_type.photo.url }}" alt="{{ binding_type.name }} Photo">
-                                {% else %}
-                                    No Photo Available
-                                {% endif %}
+                                        <img src="{{ binding_type.photo.url }}" alt="{{ binding_type.name }} Photo "
+                                             width="100" height="100">
+                                    {% else %}
+                                        No Photo Available
+                                    {% endif %}
 
                                 </td>
                                 <td class="actions text-center d-flex justify-content-around ">
-                                    <a href="#"><i class="fas fa-pencil-alt"></i></a>
-                                    <a href="#" class="delete-row"><i
-                                            class="far fa-trash-alt"></i></a>
+                                    <button type="button" class="btn btn-primary text-white"><a href="{% url 'products:binding_type_update' binding_type.id %}"><i
+                                            class="fas fa-pencil-alt"></i>O'zgartirmoq</a></button>
+                                     <button type="button" class="btn btn-primary text-white"><a href="{% url 'products:binding_type_delete' binding_type.id %}"
+                                       class="delete-row"><i
+                                            class="far fa-trash-alt"></i>O'chirmoq</a></button>
                                 </td>
 
                             </tr>
