company detail list update view done

--- a/templates/accounts/company/update.html
+++ b/templates/accounts/company/update.html
@@ -117,7 +117,7 @@
         </div>
         <div class="row action-buttons">
             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
-                <a href="{% url 'accounts:company' user.id %}"
+                <a href="{% url 'accounts:company_list' user.id %}"
                    class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
                     Orqaga</a>
             </div>
