--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -98,7 +98,7 @@
                         <ul class="nav nav-children">
 
                             <li>
-                                <a class="nav-link" href="{% url 'accounts:company' user.id %}">
+                                <a class="nav-link" href="{% url 'accounts:company_list' user.id %}">
                                     Kompaniya
                                 </a>
                             </li>
