--- a/templates/accounts/company/detail.html
+++ b/templates/accounts/company/detail.html
@@ -165,16 +165,11 @@
         </div>
         <div class="row action-buttons">
              <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
-                <a href="{% url 'accounts:home'  %}"
+                <a href="{% url 'accounts:company_list' user.id  %}"
                    class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
                     Orqaga</a>
             </div>
-            <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
-                <a href="{% url 'accounts:company_update' company.id %}"
-                   class="delete-button btn btn-success btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1  modal-basic ">
-                    <i class="bx bx-pen text-4 me-2"></i> O'zgartirish
-                </a>
-            </div>
+
         </div>
     </form>
 
