--- a/templates/accounts/company/list.html
+++ b/templates/accounts/company/list.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% load static %}
+{% block title %}Bank{% endblock %}
+
+
+{% block content %}
+    <header class="page-header page-header-left-inline-breadcrumb">
+        <h2 class="font-weight-bold text-6">Dashbord ></h2>
+        <div class="right-wrapper">
+            <ol class="breadcrumbs">
+                <li><span>Bank turlari</span></li>
+            </ol>
+        </div>
+    </header>
+
+    <div class="row">
+        <div class="col">
+
+            <div class="card card-modern card-modern-table-over-header">
+                <div class="card-header">
+                    <div class="card-actions">
+                        <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                    </div>
+                    <a type="button" href="{% url 'accounts:money_saver_add' user.id %}" class="btn btn-primary">+ Qo'shmoq</a>
+                </div>
+                <div class="card-body">
+                    <table class="table table-responsive-md table-bordered mb-0 text-center">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Korxona</th>
+                            <th>Pochta</th>
+                            <th>Telefon</th>
+                            <th>Debit</th>
+                            <th>Kredit</th>
+                            <th>Balans</th>
+                            <th>Harakat</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for company in company_list %}
+                            <tr>
+
+
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ company }}</td>
+                                <td>{{ company.email }}</td>
+                                <td>{{ company.phone }}</td>
+                                <td>{{ company.total_debit|floatformat:"2g" }} so'm</td>
+                                <td>{{ company.total_credit|floatformat:"2g" }} so'm</td>
+                                <td>{{ company.balance|floatformat:"2g" }} so'm</td>
+                                <td class="actions text-center d-flex justify-content-around ">
+                                    <a href="{% url 'accounts:company_detail' company.uuid %}"><i class="fas fa-eye"></i></a>
+                                    <a href="{% url 'accounts:company_update' company.uuid %}"><i class="fas fa-pencil-alt"></i></a>
+                                    <a href="#" class="delete-row"><i
+                                            class="far fa-trash-alt"></i></a>
+                                </td>
+
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+<!-- Specific Page Vendor -->
+
