--- a/templates/accounts/company/list.html
+++ b/templates/accounts/company/list.html
@@ -9,7 +9,7 @@
         <h2 class="font-weight-bold text-6">Dashbord ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>Bank turlari</span></li>
+                <li><span>Korxona</span></li>
             </ol>
         </div>
     </header>
