--- a/templates/accounts/company/update.html
+++ b/templates/accounts/company/update.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Mahsulotlar{% endblock %}
+{% block title %}Korxona{% endblock %}
 {% block additional_css %}
     <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.css' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.theme.css' %}"/>
@@ -46,13 +46,7 @@
                                         {{ form.name }}
                                     </div>
                                 </div>
-                                <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
-                                        manzili</label>
-                                    <div class="col-lg-7 col-xl-6">
-                                        {{ form.address }}
-                                    </div>
-                                </div>
+
                                 <div class="form-group row align-items-center pb-3">
                                     <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
                                         telefon raqam</label>
