company detail edit done

--- a/templates/accounts/banks/delete.html
+++ b/templates/accounts/banks/delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-{% block title %}Korxona o'chirish{% endblock %}
+{% block title %}Bank o'chirish{% endblock %}
 
 
 {% block content %}
