--- a/templates/accounts/company/update.html
+++ b/templates/accounts/company/update.html
@@ -4,12 +4,16 @@
 
 {% block title %}Korxona{% endblock %}
 {% block additional_css %}
-    <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.theme.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/select2-bootstrap-theme/select2-bootstrap.min.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/dropzone/basic.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/dropzone/dropzone.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap-markdown/css/bootstrap-markdown.min.css' %}"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"/>
+    <style>
+
+        #map {
+            height: 500px;
+        }
+
+    </style>
 {% endblock %}
 
 {% block content %}
@@ -67,7 +71,80 @@
                 </section>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <section class="card">
+                    <header class="card-header">
+                        <div class="card-actions">
+                            <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                            <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
+                        </div>
 
+                        <h2 class="card-title">Manzil</h2>
+                    </header>
+                    <div class="card-body">
+
+                        <div id="map"></div>
+
+                    </div>
+                </section>
+            </div>
+            <div class="col-lg-4">
+                <section class="card">
+                    <header class="card-header">
+                        <div class="card-actions">
+                            <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                            <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
+                        </div>
+
+                        <h2 class="card-title">Manzil</h2>
+                    </header>
+                    <div class="card-body" style="height: 530px;">
+
+                        <div class="form-row">
+                            <div class="form-group col mb-3">
+                                <label>Manzil</label>
+                                <div class="text">
+
+                                        <textarea type="text" name="address" class="form-control form-control-modern "
+
+                                        >{{ company.location.name }}</textarea>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col mb-3">
+                                <label>Latitude</label>
+                                <div class="text">
+
+                                    <input type="text" name="latitude" class="form-control" id="latitude"
+                                           placeholder="{{ company.location.latitude }}"
+                                           readonly>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col mb-3">
+                                <label>Longitude</label>
+                                <div class="text">
+
+                                    <input type="text" name="longitude" class="form-control" id="longitude"
+                                           placeholder="{{ company.location.longitude }}"
+                                           readonly>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+            </div>
+        </div>
         <div class="row mt-2">
             <div class="col">
                 <section class="card card-modern card-big-info">
@@ -109,6 +186,8 @@
                 </section>
             </div>
         </div>
+
+
         <div class="row action-buttons">
             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
                 <a href="{% url 'accounts:company_list' user.id %}"
@@ -129,5 +208,36 @@
 {% endblock %}
 
 {% block additional_js %}
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
 
+    <script>
+        let mapOptions = {
+            center: [41.44434969087804, 69.55308079719545],
+            zoom: 15
+        }
+
+        let map = new L.map('map', mapOptions);
+
+        let layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+        map.addLayer(layer);
+
+
+        let marker = null;
+        map.on('click', (event) => {
+
+            if (marker !== null) {
+                map.removeLayer(marker);
+            }
+
+            marker = L.marker([event.latlng.lat, event.latlng.lng]).addTo(map);
+
+            document.getElementById('latitude').value = event.latlng.lat;
+            document.getElementById('longitude').value = event.latlng.lng;
+
+        })
+        L.marker([{{ company.location.latitude }}, {{ company.location.longitude }}]).addTo(map)
+            .bindPopup('{{ company.location.name }}')
+            .openPopup();
+    </script>
 {% endblock %}
