update user detail view

--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -117,7 +117,7 @@
             <div class="dropdown-menu">
                 <ul class="list-unstyled">
                     <li>
-                        <a role="menuitem" tabindex="-1" href="pages-user-profile.html"><i class="bx bx-user"></i>
+                        <a role="menuitem" tabindex="-1" href="{%  url 'accounts:user_detail' user.id %}"><i class="bx bx-user"></i>
                             My Profile</a>
                     </li>
 
