update user detail and update view

--- a/templates/accounts/user/detail.html
+++ b/templates/accounts/user/detail.html
@@ -43,11 +43,11 @@
             <div class="tabs">
                 <ul class="nav nav-tabs tabs-primary">
                     <li class="nav-item active">
-                        <button class="nav-link" data-bs-target="#overview" data-bs-toggle="tab">Umumiy ma'lumot
-                        </button>
+                        <a href="{% url 'accounts:user_detail' user.id %}" class="nav-link">Umumiy ma'lumot
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <button class="nav-link" data-bs-target="#edit" data-bs-toggle="tab">O'zgartirmoq</button>
+                    <li class="nav-item ">
+                        <a href="{% url 'accounts:user_update' user.id %}" class="nav-link">O'zgartirmoq</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -115,67 +115,7 @@
                         </div>
 
                     </div>
-                    <div id="edit" class="tab-pane">
 
-                        <form class="p-3">
-                            <h4 class="mb-3 font-weight-semibold text-dark">Personal Information</h4>
-                            <div class="row row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress">Address</label>
-                                    <input type="text" class="form-control" id="inputAddress"
-                                           placeholder="1234 Main St">
-                                </div>
-                            </div>
-                            <div class="row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress2">Address 2</label>
-                                    <input type="text" class="form-control" id="inputAddress2"
-                                           placeholder="Apartment, studio, or floor">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label for="inputCity">City</label>
-                                    <input type="text" class="form-control" id="inputCity">
-                                </div>
-                                <div class="form-group col-md-4 border-top-0 pt-0">
-                                    <label for="inputState">State</label>
-                                    <select id="inputState" class="form-control">
-                                        <option selected>Choose...</option>
-                                        <option>...</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-2 border-top-0 pt-0">
-                                    <label for="inputZip">Zip</label>
-                                    <input type="text" class="form-control" id="inputZip">
-                                </div>
-                            </div>
-
-                            <hr class="dotted tall">
-
-                            <h4 class="mb-3 font-weight-semibold text-dark">Change Password</h4>
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword4">New Password</label>
-                                    <input type="password" class="form-control" id="inputPassword4"
-                                           placeholder="Password">
-                                </div>
-                                <div class="form-group col-md-6 border-top-0 pt-0">
-                                    <label for="inputPassword5">Re New Password</label>
-                                    <input type="password" class="form-control" id="inputPassword5"
-                                           placeholder="Password">
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12 text-end mt-3">
-                                    <button class="btn btn-primary modal-confirm">Save</button>
-                                </div>
-                            </div>
-
-                        </form>
-
-                    </div>
                 </div>
             </div>
         </div>
