--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -47,7 +47,7 @@
         <div class="panel card-sign">
             <div class="card-title-sign mt-3 text-end">
                 <h2 class="title text-uppercase font-weight-bold m-0"><i
-                        class="bx bx-user-circle me-1 text-6 position-relative top-5"></i> Sign In</h2>
+                        class="bx bx-user-circle me-1 text-6 position-relative top-5"></i> Login</h2>
             </div>
             <div class="card-body">
                 <form action="." method="post">
@@ -64,7 +64,7 @@
 
                     <div class="form-group mb-3">
                         <div class="clearfix">
-                            <label class="float-left">Password</label>
+                            <label class="float-left">Parol</label>
 
                         </div>
                         <div class="input-group">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4 text-end">
-                            <button type="submit" class="btn btn-primary mt-2">Sign In</button>
+                            <button type="submit" class="btn btn-primary mt-2">Kirish</button>
                         </div>
                     </div>
 
