--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -122,7 +122,7 @@
                     </li>
 
                     <li>
-                        <a role="menuitem" tabindex="-1" href="pages-signin.html"><i class="bx bx-log-out"></i>
+                        <a role="menuitem" tabindex="-1" href="{% url 'accounts:logout' %}"><i class="bx bx-log-out"></i>
                             Logout</a>
                     </li>
                 </ul>
