--- a/templates/accounts/user/update.html
+++ b/templates/accounts/user/update.html
@@ -54,66 +54,66 @@
                 <div class="tab-content">
 
 
-
-                        <form class="p-3">
-                            <h4 class="mb-3 font-weight-semibold text-dark">Shaxsiy ma'lumotlar</h4>
-                            <div class="row row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress">Username</label>
-                                    {{ form.username }}
-                                </div>
+                    <form class="p-3" action="" method="post">
+                        {% csrf_token %}
+                        <h4 class="mb-3 font-weight-semibold text-dark">Shaxsiy ma'lumotlar</h4>
+                        <div class="row row mb-4">
+                            <div class="form-group col">
+                                <label for="inputAddress">Username</label>
+                                {{ form.username }}
                             </div>
-                            <div class="row row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress">Ism</label>
-                                    {{ form.first_name }}
-                                </div>
+                        </div>
+                        <div class="row row mb-4">
+                            <div class="form-group col">
+                                <label for="inputAddress">Ism</label>
+                                {{ form.first_name }}
                             </div>
-                            <div class="row row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress">Familiya</label>
-                                   {{ form.last_name }}
-                                </div>
+                        </div>
+                        <div class="row row mb-4">
+                            <div class="form-group col">
+                                <label for="inputAddress">Familiya</label>
+                                {{ form.last_name }}
                             </div>
-                            <div class="row row mb-4">
-                                <div class="form-group col">
-                                    <label for="inputAddress">Pochta</label>
-                                     {{ form.email }}
-                                </div>
+                        </div>
+                        <div class="row row mb-4">
+                            <div class="form-group col">
+                                <label for="inputAddress">Pochta</label>
+                                {{ form.email }}
                             </div>
+                        </div>
 
-                            <div class="row">
+                        <div class="row">
 
-                                <div class="form-group col-md-12 border-top-0 pt-0">
-                                    <label for="inputState">Rol</label>
-                                    {{ form.role }}
-                                </div>
-
+                            <div class="form-group col-md-12 border-top-0 pt-0">
+                                <label for="inputState">Rol</label>
+                                {{ form.role }}
                             </div>
 
-                            <hr class="dotted tall">
+                        </div>
 
-                            <h4 class="mb-3 font-weight-semibold text-dark">Parolni o'zgartirish</h4>
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword4">Yangi parol</label>
-                                    <input type="password" class="form-control" id="inputPassword4"
-                                           placeholder="Password">
-                                </div>
-                                <div class="form-group col-md-6 border-top-0 pt-0">
-                                    <label for="inputPassword5">Takrorlash yangi parol</label>
-                                    <input type="password" class="form-control" id="inputPassword5"
-                                           placeholder="Password">
-                                </div>
+                        <hr class="dotted tall">
+
+{#                        <h4 class="mb-3 font-weight-semibold text-dark">Parolni o'zgartirish</h4>#}
+{#                        <div class="row">#}
+{#                            <div class="form-group col-md-6">#}
+{#                                <label for="inputPassword4">Yangi parol</label>#}
+{#                                <input type="password" class="form-control" id="inputPassword4"#}
+{#                                       placeholder="Password">#}
+{#                            </div>#}
+{#                            <div class="form-group col-md-6 border-top-0 pt-0">#}
+{#                                <label for="inputPassword5">Takrorlash yangi parol</label>#}
+{#                                <input type="password" class="form-control" id="inputPassword5"#}
+{#                                       placeholder="Password">#}
+{#                            </div>#}
+{#                        </div>#}
+
+                        <div class="row">
+                            <div class="col-md-12 text-end mt-3">
+                                <button type="submit" class="btn btn-primary modal-confirm">Saqlash</button>
                             </div>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-md-12 text-end mt-3">
-                                    <button class="btn btn-primary modal-confirm">Saqlash</button>
-                                </div>
-                            </div>
-
-                        </form>
+                    </form>
 
 
                 </div>
