--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -1,4 +1,4 @@
-{% load static i18n %}
+{% load static i18n custom_tags %}
 <!-- start: header -->
 <header class="header header-nav-menu header-nav-links">
     <div class="logo-container">
@@ -15,38 +15,32 @@
     </div>
 
     <!-- start: search & user box -->
-    <div class="header-right">
-        {##}
-        {#        <a class="btn search-toggle d-none d-md-inline-block d-xl-none" data-toggle-class="active"#}
-        {#           data-target=".search"><i class="bx bx-search"></i></a>#}
-        {#        <span class="separator"></span>#}
-        {#        <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage" data-bs-toggle="dropdown"#}
-        {#           aria-haspopup="true" aria-expanded="false">#}
-        {#            <img src="{% static 'img/blank.gif' %}" class="flag flag-uz" alt="English"/> O'zbek#}
-        {#            <i class="fas fa-chevron-down"></i>#}
-        {#        </a>#}
-        {#        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">#}
-        {#            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-uz"#}
-        {#                                                   alt="English"/> O'zbek</a>#}
-        {#            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-ru"#}
-        {#                                                   alt="English"/> Русский</a>#}
-        {##}
-        {#        </div>#}
+    <div  x-data="{ isOpen: false }" class="header-right">
+        {% get_available_languages as LANGUAGES %}
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_language_info_list for LANGUAGES as languages %}
         <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage" data-bs-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
-           {% trans "Til" %}:
-    <img src="{% static 'img/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}" alt="{{ LANGUAGE_CODE }}"/>
-    {{ get_language_info.LANGUAGE_CODE.name }}
-    <i class="fas fa-chevron-down"></i>
+            {% if LANGUAGE_CODE == 'uz' %}
+                <img src="{% static 'img/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}"
+                     alt="{{ LANGUAGE_CODE }}"/> {{ LANGUAGE_CODE|language_name_local }}
+            {% else %}
+                <img src="{% static 'img/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}"
+                     alt="{{ LANGUAGE_CODE }}"/> {{ LANGUAGE_CODE|language_name_local }}
+            {% endif %}
+            (DEBUG: {{ request.LANGUAGE_CODE }})
+            <i class="fas fa-chevron-down"></i>
         </a>
 
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
-            <a class="dropdown-item" href="{% url 'set_language' 'uz' %}"><img src="{% static 'img/blank.gif' %}"
-                                                                               class="flag flag-uz" alt="O'zbek"/>
-                O'zbek</a>
-            <a class="dropdown-item" href="{% url 'set_language' 'ru' %}"><img src="{% static 'img/blank.gif' %}"
-                                                                               class="flag flag-ru" alt="Русский"/>
-                Русский</a>
+            {% for language in LANGUAGES %}
+                {% if not language.0 == LANGUAGE_CODE %}
+                    <a class="dropdown-item" href="{{ request.get_full_path|lang_switch_link:language.0 }}"><img
+                            src="{% static 'img/blank.gif' %}"
+                            class="flag flag-{{ language.0 }}"
+                            alt="{{ language.0 }}"/>{{ language.1 }}</a>
+                {% endif %}
+            {% endfor %}
         </div>
 
         <span class="separator"></span>
